--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<script src="../ReactJS/lucy/src/App.js"></script>
 <title>Lucy - Automatische JAVA Korrektur</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -90,11 +91,11 @@
       <div class="w3-padding">
         <form class="w3-container w3-card-4">
 		  <div class="w3-section">      
-			<input id="benutzername" class="w3-input" type="text" required>
+			<input id="anmelden_benutzername" class="w3-input" type="text" required>
 			<label>Benutzername</label>
 		  </div>
 		  <div class="w3-section">      
-			<input id="passwort" class="w3-input" type="password" required>
+			<input id="anmelden_passwort" class="w3-input" type="password" required>
 			<label>Passwort</label>
 		  </div>	  
 		  <div class="w3-padding">
