--- a/Frontend/dashboard.html
+++ b/Frontend/dashboard.html
@@ -17,6 +17,7 @@
   <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white" title="Einstellungen"><i class="fa fa-cog"></i></a>
  </div>
 </div>
+
 <!-- Page Container -->
 <div class="w3-container w3-content" style="max-width:1400px;margin-top:80px">    
   <!-- The Grid -->
@@ -54,7 +55,7 @@
                 <div id="prog_Anfaenger" class="w3-container w3-round-xlarge w3-theme w3-padding" style="width:90%">90%</div>
                 </div>
               </p>
-              <button type="button" class="w3-button w3-blue-grey" id="btnA_Start">Kurs Starten</button>
+              <button type="button" class="w3-button w3-blue-grey w3-margin-top" id="btnA_Start">Kurs Starten</button>
             </div>
           </div>
 
@@ -66,10 +67,10 @@
               <p>Fortschritt:</p>
               <p>
                 <div class="w3-light-grey w3-round-xlarge">
-                  <div id="prog_Fortgeschritten" class="w3-container w3-round-xlarge w3-theme w3-padding" style="width:1%">0</div>
+                  <div id="prog_Fortgeschritten" class="w3-container w3-round-xlarge w3-theme w3-padding" style="width:20%">20%</div>
                 </div>
               </p>
-              <button type="button" class="w3-button w3-blue-grey" id="btnF_Start">Kurs Starten</button>
+              <button type="button" class="w3-button w3-blue-grey w3-margin-top" id="btnF_Start">Kurs Starten</button>
             </div>
           </div>
         </div>
@@ -85,10 +86,10 @@
                 <p>Fortschritt:</p>
                 <p>
                   <div class="w3-light-grey w3-round-xlarge">
-                    <div id="prog_Experte" class="w3-container w3-round-xlarge w3-theme w3-padding" style="width:1%">0</div>
+                    <div id="prog_Experte" class="w3-container w3-round-xlarge w3-theme w3-padding" style="width:1%">&nbsp;</div>
                   </div>
                 </p>
-                <button type="button" class="w3-button w3-blue-grey" id="btnE_Start">Kurs Starten</button>
+                <button type="button" class="w3-button w3-blue-grey w3-margin-top" id="btnE_Start">Kurs Starten</button>
               </div>
             </div>
           </div>
@@ -119,66 +120,6 @@
 
 <!-- Script for Sidebar, Tabs, Accordions, Progress bars and slideshows -->
 <script>
-// Side navigation
-function w3_open() {
-    var x = document.getElementById("mySidebar");
-    x.style.width = "100%";
-    x.style.fontSize = "40px";
-    x.style.paddingTop = "10%";
-    x.style.display = "block";
-}
-function w3_close() {
-    document.getElementById("mySidebar").style.display = "none";
-}
-
-// Tabs
-function openCity(evt, cityName) {
-  var i;
-  var x = document.getElementsByClassName("city");
-  for (i = 0; i < x.length; i++) {
-     x[i].style.display = "none";
-  }
-  var activebtn = document.getElementsByClassName("testbtn");
-  for (i = 0; i < x.length; i++) {
-      activebtn[i].className = activebtn[i].className.replace(" w3-theme-dark", "");
-  }
-  document.getElementById(cityName).style.display = "block";
-  evt.currentTarget.className += " w3-theme-dark";
-}
-
-var mybtn = document.getElementsByClassName("testbtn")[0];
-mybtn.click();
-
-// Accordions
-function myAccFunc(id) {
-    var x = document.getElementById(id);
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-    } else { 
-        x.className = x.className.replace(" w3-show", "");
-    }
-}
-
-// Slideshows
-var slideIndex = 1;
-
-function plusDivs(n) {
-slideIndex = slideIndex + n;
-showDivs(slideIndex);
-}
-
-function showDivs(n) {
-  var x = document.getElementsByClassName("mySlides");
-  if (n > x.length) {slideIndex = 1}    
-  if (n < 1) {slideIndex = x.length} ;
-  for (i = 0; i < x.length; i++) {
-     x[i].style.display = "none";  
-  }
-  x[slideIndex-1].style.display = "block";  
-}
-
-showDivs(1);
-
 // Progress Bars
 function move() {
   var elem = document.getElementById("myBar");   
